--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,30 @@
+<div class="ui container">
+  <div class="ui secondary pointing menu">
+    <a routerLink="/" routerLinkActive="active" class="item" [routerLinkActiveOptions]="{exact:
+      true}">
+      Home
+    </a>
+    <a routerLink="/posts" routerLinkActive="active" class="item">
+      Blogs
+    </a>
+    <a routerLink="/battle-reports" routerLinkActive="active" class="item">
+      Battle Reports
+    </a>
+    <a routerLink="/about" routerLinkActive="active" class="item">
+      About
+    </a>
+    <div class="right menu" *ngIf="!(auth.authState | async)">
+      <a class="ui item" (click)="login()">
+        Login
+      </a>
+    </div>
+    <div class="right menu" *ngIf="(auth.authState | async)">
+      <a class="ui item" (click)="logout()">
+        Logout
+      </a>
+    </div>
+  </div>
 
-loading :D
+  <router-outlet></router-outlet>
+</div>
 
-<ul>
-  <li *ngFor="let msg of data | async">{{msg.Message}}</li>
-</ul>
-
-<router-outlet></router-outlet>
