--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,1 +1,9 @@
-<p>blog works!</p>
+<a routerLink="/posts/new" class="ui button"><i class="icon plus"></i>New Post</a>
+
+<hr />
+
+TODO:
+<ul>
+    <li>List blog posts</li>
+    <li>Filter / Search posts</li>
+</ul>
