--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,5 @@
 <p>home works!</p>
 
-<p *ngFor="let post of posts | async">{{post.Title}}</p>
+<p *ngFor="let post of posts | async">
+    <a [routerLink]="['posts', post.Slug]">{{post.Title}}</a>
+</p>
