view blog post working, starting basic blocks on home page.

--- a/src/app/blog/blogform/blogform.component.html
+++ b/src/app/blog/blogform/blogform.component.html
@@ -13,8 +13,8 @@
     Save
   </button>
 
-  <button class="ui button">
+  <a routerLink="/posts" class="ui button">
     Discard
-  </button>
+  </a>
 
 </form>
