minor changes to blog view

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,18 @@
-
-
-<iframe src="https://open.spotify.com/embed-podcast/show/3m9ycjUwMbuDVIxpw4tojb" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+<div class="ui grid">
+    <div class="eight wide column">
+        <h1>Welcome to the Gloucester Tabletop Gaming Community</h1>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus id volutpat sapien. 
+            Mauris interdum mi eros, sit amet sollicitudin libero iaculis vitae. Fusce a lacus turpis. 
+            Ut sit amet metus in erat lobortis pulvinar. Nulla facilisi. Mauris mollis auctor ligula 
+            vel malesuada. Fusce gravida massa id neque vestibulum, ut ornare justo finibus. 
+            Vivamus lobortis eros non sem placerat rhoncus. 
+        </p>
+    </div>
+    <div class="eight wide column">
+        <iframe src="https://open.spotify.com/embed-podcast/show/3m9ycjUwMbuDVIxpw4tojb" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    </div>
+</div>
 
 
 <div class="ui items">
