bye bye fomantic, hello bootstrap/shards-ui

--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,4 +1,4 @@
-<a routerLink="/posts/new" class="ui button"><i class="icon plus"></i>New Post</a>
+<a routerLink="/posts/new" class="btn btn-success"><i class="icon plus"></i>New Post</a>
 
 <hr />
 
