--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,50 @@
-<div class="ui container">
+
+<div class="container">
+
+<nav class="navbar navbar-expand-lg navbar-light bg-white">
+  <a class="navbar-brand" href="#">GTGC</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a routerLink="/"  class="nav-link">
+          Home
+        </a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="/posts" class="nav-link">
+          Blogs
+        </a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="/about" routerLinkActive="active" class="nav-link">
+          About
+        </a>
+      </li>
+    </ul>
+  </div>
+  <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+    <ul class="navbar-nav ml-auto">
+        <li class="nav-item" *ngIf="!(auth.authState | async)">
+          <a class="nav-link" (click)="login()">
+            Login
+          </a>
+        </li>
+        <li class="nav-item" *ngIf="(auth.authState | async)">
+          <a class="nav-link" href="" (click)="logout()">
+            Logout
+          </a>
+      </li>
+    </ul>
+</div>
+</nav>
+  <router-outlet></router-outlet>
+</div>
+
+<!-- <div class="ui container">
   <div class="ui secondary pointing menu">
     <a routerLink="/" routerLinkActive="active" class="item" [routerLinkActiveOptions]="{exact:
       true}">
@@ -27,4 +73,4 @@
 
   <router-outlet></router-outlet>
 </div>
-
+ -->
