--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,12 @@
       </li>
       <li class="nav-item">
         <a routerLink="/posts" class="nav-link">
-          Blogs
+          Posts
+        </a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="/leagues" class="nav-link">
+          Leagues
         </a>
       </li>
       <li class="nav-item">
