--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,20 @@
 <div class="row">
-    <div class="col-sm-12 col-md-6">
-        <h1>Welcome to the Gloucester Tabletop Gaming Community</h1>
+    <div class="col-12">
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus id volutpat sapien. 
-            Mauris interdum mi eros, sit amet sollicitudin libero iaculis vitae. Fusce a lacus turpis. 
-            Ut sit amet metus in erat lobortis pulvinar. Nulla facilisi. Mauris mollis auctor ligula 
-            vel malesuada. Fusce gravida massa id neque vestibulum, ut ornare justo finibus. 
-            Vivamus lobortis eros non sem placerat rhoncus. 
+            Welcomes to the Gloucester Tabletop Gaming Community (GTGC), we are a group of tabletop players playing
+            everything and anything that fits on a table ... 
+            ... someone else will be able to edit this and add a decent into.
+        </p>
+    </div>
+</div>
+
+<div class="row ">
+    <div class="col-sm-12 col-md-6">
+        <h2>The GTGC Podcast</h2>
+        <p>
+            This week Karl,Luke,Holly,Phil, & John kick off the GTGC's podcast, discussing the club, their armies
+            the latest Psychic Awakening release from Games workshop and who is the worse player at the club.
+            This content will also be editable ... 
         </p>
     </div>
     <div class="col-sm-12 col-md-6">
@@ -15,7 +23,7 @@
 </div>
 
 
-<div class="row" *ngFor="let post of posts">
+<div class="row mt-2" *ngFor="let post of posts">
     <div class="col-12">
         <div class="card">
             <div class="card-body">
