--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,9 +1,54 @@
-<a routerLink="/posts/new" class="btn btn-success"><i class="icon plus"></i>New Post</a>
 
-<hr />
+<div class="row">
+    <div class="col-12">
+        <a routerLink="/posts/new" class="btn btn-success"><i class="icon plus"></i>New Post</a>
+    </div>
+</div>
 
-TODO:
-<ul>
-    <li>List blog posts</li>
-    <li>Filter / Search posts</li>
-</ul>
+
+<!--
+
+    TODO: Put this in a component;
+        args:  number of rows to show
+               condition to show.          
+-->
+<div class="row" *ngIf="posts == null">
+    <div class="col-12 mt-3" >
+        <div class="card">
+            <div class="card-body">
+                <div class="article-loading">
+                    <div class="title"></div>
+                    <div class="line"></div>
+                    <div class="line"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-12 mt-3">
+        <div class="card">
+            <div class="card-body">
+                <div class="article-loading">
+                    <div class="title"></div>
+                    <div class="line"></div>
+                    <div class="line"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row mt-3" *ngFor="let post of posts">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+                <a [routerLink]="['/posts', post.Slug]"><h5>{{post.Title}}</h5></a>
+                <p class="card-text">
+                    By [user] on {{post.DateCreated | date: "short"}}
+                    <a [routerLink]="['/posts', post.Slug]" class="btn btn-primary btn-sm float-right">Read</a>
+                </p>
+                
+            </div>
+        </div>
+    </div>
+</div>
+
