--- a/src/app/blog/viewblog/viewblog.component.html
+++ b/src/app/blog/viewblog/viewblog.component.html
@@ -1,8 +1,20 @@
 
- 
- 
- <h3>{{post.Title}}</h3>
-
- <div>
-    {{post.Content}}
+ <div class="row">
+     <div class="col-12">
+        <button class="btn btn-light btn-sm mr-2">edit</button>
+     </div>
  </div>
+
+<div class="row mt-2">
+    <div class="col-12">
+
+        <div class="card">
+            <div class="card-body">
+                <h3 class="card-title">{{post.Title}}</h3>
+                <div class="card-text" [innerHtml]="post.Content">
+                </div>
+            </div>
+        </div>
+       
+    </div>
+</div>
