--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,33 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+.article-loading {
+    width:100;
+
+    .title {
+        width:33%;
+        background: #d8d8d8;
+        height:1.25rem;
+
+    }
+
+    .line {
+        width:100%;
+        height:1rem;
+        background: #d8d8d8;
+        margin-top:6px;
+
+        &:first-of-type {
+            width:90%;
+        }
+
+        &:nth-of-type(1) {
+            width:85%;
+        }
+
+    }
+
+
+
+
+}
