--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,14 +7,21 @@
 </div>
 
 <div class="row">
+    <div class="col">
+        <div class="alert alert-warning">
+            Due to COVID-19 the club is not currently meeting but we are still active. Check our social media. 
+        </div>
+    </div>
+</div>
+
+<div class="row">
     <div class="col-sm-12 col-md-6">
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">Welcome to the GTGC</h4>
                 <p class="card-text">
-                    Welcomes to the Gloucester Tabletop Gaming Community (GTGC), we are a group of tabletop players playing
-                    everything and anything that fits on a table ... 
-                    ... someone else will be able to edit this and add a decent into.
+                    Welcomes to the Gloucester Tabletop Gaming Community (GTGC) Website, we are a Gloucester based community meeting every Tuesday at the Tuffley Comminty Centre.
+                    Our members play a wide range of games from 40k to Dungeons and Dragons and everything inbetween. 
                 </p>
             </div>
         </div>
