styling changes, added podcast page

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,41 @@
-<p>about works!</p>
+<div class="row">
+    <div class="col-sm-12">
+        <div class="card">
+            <div class="card-body">
+                
+                <p>
+                    We are the largest and friendliest gaming community in Gloucester and we meet every Tuesday evening from 19:00 at
+                </p>
+
+                <address>
+                    Tuffley Community Association <br />
+                    Windsor Drive <br />
+                    Tuffley  <br />
+                    Gloucester <br />
+                    GL4 0RS
+                </address>
+                 
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d862.0226417546396!2d-2.2617526707121582!3d51.830390898730606!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4871089f8d8892b5%3A0xae72fd02c0d6d69e!2sTuffley%20Community%20Association%20%7C%20Windsor%20Drive%20Social%20Club!5e1!3m2!1sen!2suk!4v1586332789569!5m2!1sen!2suk" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    
+                <p>
+                    There is plenty of onsite parking and the no. 10 bus route stops just outside. Inside, the club has a
+                    bar serving both alcoholic and non-alcoholic drinks and a variety of snacks.
+                    On club nights, we regularly have a mixture of the following games being played:
+                </p>
+                <ul>
+                    <li>Warhammer 40,000</li>
+                    <li>Age of Sigmar</li>
+                    <li>Blood Bowl</li>
+                    <li>Necromunda</li>
+                    <li>Magic the Gathering</li>
+                    <li>Terraforming Mars</li>
+                    <li>Game of Thrones</li>
+                    <li>Colt Express</li>
+                    <li>Dead of Winter</li>
+                    <li>Ticket to Ride</li>
+                    <li><i>+ many more!</i></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
