--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
 <div class="row">
     <div class="col">
         <div class="alert alert-warning">
-            Due to COVID-19 the club is not currently meeting but we are still active. Check our social media. 
+            Due to COVID-19 the club is not currently meeting but we are still active, Check out our social media pages to see what our members have been up to.
         </div>
     </div>
 </div>
@@ -20,8 +20,8 @@
             <div class="card-body">
                 <h4 class="card-title">Welcome to the GTGC</h4>
                 <p class="card-text">
-                    Welcomes to the Gloucester Tabletop Gaming Community (GTGC) Website, we are a Gloucester based community meeting every Tuesday at the Tuffley Comminty Centre.
-                    Our members play a wide range of games from 40k to Dungeons and Dragons and everything inbetween. 
+                    Welcomes to the Gloucester Tabletop Gaming Community (GTGC) Website, we are a Gloucester based gaming community meeting every Tuesday at the Tuffley Comminty Centre.
+                    Our members play a wide range of games from 40k to Dungeons and Dragons and everything inbetween, for more information click <a routerLink="/about">here</a>
                 </p>
             </div>
         </div>
