styled the login page, added SN links to banner

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,8 +8,12 @@
 
 <div class="row">
     <div class="col">
-        <div class="alert alert-warning">
+        <div class="alert alert-info">
+            <p class="mb-0">
             Due to COVID-19 the club is not currently meeting but we are still active, Check out our social media pages to see what our members have been up to.
+            </p>
+            <a href="https://www.facebook.com/groups/Gloucestertabletopgamingcommunity" target="_blank" class="text-white mr-2"><i class="fab fa-facebook"></i> facebook</a>
+            <a href="https://www.instagram.com/glos_tabletop_gaming_community/" target="_blank" class="text-white"><i class="fab fa-instagram"></i> instagram</a>
         </div>
     </div>
 </div>
