--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 
   <nav class="navbar navbar-expand-lg navbar-light bg-white">
-    <a class="navbar-brand" href="#">GTGC</a>
+    <a class="navbar-brand" routerLink="" >GTGC</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -43,8 +43,8 @@
             Signup
           </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" (click)="login()">
+        <li class="nav-item" routerLinkActive="active"> 
+          <a class="nav-link" routerLinkActive="active" routerLink="/login" >
             Login
           </a>
         </li>
