--- a/src/app/user-login/user-login.component.html
+++ b/src/app/user-login/user-login.component.html
@@ -1,1 +1,29 @@
-<p>user-login works!</p>
+<div class="row">
+    <div class="col-12 d-flex align-content-center flex-column">
+        <div class="card" style="width:30rem;">
+            <div class="card-body">
+                <form>
+                    <div class="form-group">
+                        <label>Email</label>
+                        <input type="text" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <label>Password</label>
+                        <input type="password" class="form-control" />
+                    </div>
+                    <input type="submit" value="Login" class="btn btn-primary" />
+
+                </form>
+            </div>
+        </div>
+        <div class="d-flex flex-column">
+        <div class="btn btn-danger mt-3" style="width:30rem;" (click)="login_google()">
+            <i class="fab fa-google"></i> Sign in with google
+        </div>
+
+        <div class="btn btn-primary mt-3" style="width:30rem;" (click)="login_facebook()">
+            <i class="fab fa-facebook"></i> Sign in with facebook
+        </div>
+    </div>
+    </div>
+</div>
