removed league menu item.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,11 +19,11 @@
             Posts
           </a>
         </li>
-        <li class="nav-item" routerLinkActive="active">
+        <!-- <li class="nav-item" routerLinkActive="active">
           <a routerLink="/leagues" class="nav-link">
             Leagues
           </a>
-        </li>
+        </li> -->
         <li class="nav-item" routerLinkActive="active">
           <a routerLink="/podcast" class="nav-link">
             Podcast
