blog form is now a standalone component

--- a/src/app/blog/viewblog/viewblog.component.html
+++ b/src/app/blog/viewblog/viewblog.component.html
@@ -1,5 +1,5 @@
 <div class="row" *ngIf="post == null">
-    <div class="col-12 mt-3" >
+    <div class="col-12 mt-3">
         <div class="card">
             <div class="card-body">
                 <div class="article-loading">
@@ -11,23 +11,23 @@
         </div>
     </div>
 </div>
-<div  *ngIf="post != null">
- <div class="row">
-     <div class="col-12">
-        <button class="btn btn-light btn-sm mr-2" [routerLink]="['/posts', post.DocumentRef, 'edit']">edit</button>
-     </div>
- </div>
+<div *ngIf="post != null">
+    <div class="row">
+        <div class="col-12">
+            <button class="btn btn-light btn-sm mr-2" [routerLink]="['/posts', post.DocumentRef, 'edit']">edit</button>
+        </div>
+    </div>
 
-<div class="row mt-2">
-    <div class="col-12">
-        <div class="card">
-            <div class="card-body">
-                <h3 class="card-title">{{post.Title}}</h3>
-                <div class="card-text" [innerHtml]="post.Content">
+    <div class="row mt-2">
+        <div class="col-12">
+            <div class="card">
+                <div class="card-body">
+                    <h3 class="card-title">{{post.Title}}</h3>
+                    <p>By {{post.Author}} on {{post.DateCreated | date: "short"}}</p>
+                    <div class="card-text" [innerHtml]="post.Content">
+                    </div>
                 </div>
             </div>
         </div>
-       
     </div>
-</div>
 </div>
