--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -76,7 +76,7 @@
             <div class="card-body">
                 <a [routerLink]="['/posts', post.Slug]"><h5>{{post.Title}}</h5></a>
                 <p class="card-text">
-                    By [user] on {{post.DateCreated | date: "short"}}
+                    By {{post.Author}} on {{post.DateCreated | date: "short"}}
                     <a [routerLink]="['/posts', post.Slug]" class="btn btn-primary btn-sm float-right">Read</a>
                 </p>
                 
