--- a/src/app/user-login/user-login.component.html
+++ b/src/app/user-login/user-login.component.html
@@ -21,9 +21,9 @@
             <i class="fab fa-google"></i> Sign in with google
         </div>
 
-        <div class="btn btn-primary mt-3" style="width:30rem;" (click)="login_facebook()">
+        <!-- <div class="btn btn-primary mt-3" style="width:30rem;" (click)="login_facebook()">
             <i class="fab fa-facebook"></i> Sign in with facebook
-        </div>
+        </div> -->
     </div>
     </div>
 </div>
