trying to load podcast profiles from store

--- a/src/app/podcast/podcast.component.html
+++ b/src/app/podcast/podcast.component.html
@@ -1,6 +1,10 @@
 <div class="row">
 
-    <div class="col-12">
+    <div class="col-6">
+        <img src="https://firebasestorage.googleapis.com/v0/b/gtgc-95335.appspot.com/o/Goblins%2Fgobbos.jfif?alt=media&token=eb467552-bbde-48e6-916b-418aef10d340" class="img-fluid">
+    </div>
+
+    <div class="col-6">
         <div class="card">
             <iframe src="https://open.spotify.com/embed-podcast/show/3m9ycjUwMbuDVIxpw4tojb" width="100%" height="232"
                 frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
@@ -12,89 +16,12 @@
             </div>
         </div>
     </div>
-
-    <div class="col-12 pt-3">
-        <div class="card">
-            <div class="card-body">
-                <h4><img src=" http://placekitten.com/g/75/75" class="profile" />Karl</h4>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut erat dolor, blandit ut
-                    eleifend sed, pharetra ac mi. Nullam tincidunt sed metus ut imperdiet. Vivamus cursus, metus vel
-                    luctus mollis, lacus quam efficitur est, et eleifend tortor leo quis tellus. Donec tincidunt, turpis
-                    sed varius semper, nisi dolor dictum magna, in facilisis eros odio ac odio
-                </p>
-            </div>
-        </div>
-    </div>
-    <div class="col-12 pt-3">
-        <div class="card">
-            <div class="card-body">
-                <h4><img src=" http://placekitten.com/g/75/75" class="profile" />John</h4>
-                <p class="card-text">
-                    John started playing 40k back in 3rd edition, collecting the Emperors most loyal sons Dark Angels
-                    and later Tau. After taking a hiatus in the last 2000's he started collecting 40k again around 2013 starting with Chaos Space Marines and later Tau. 
-                    As well as 40k he also plays boardagmes, Plays/DM's dungeons and dragons, dark heresy, or any RPG system
-                    that takes his fancy.
-                </p>
-                <p class="card-text">
-                    John started going down the GTGC mid 2019, and has not won a game of 40k since.
-                </p>
-            </div>
-        </div>
-    </div>
-    <div class="col-12 pt-3">
-        <div class="card">
-            <div class="card-body">
-                <h4><img src=" http://placekitten.com/g/75/75" class="profile" />Phil</h4>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut erat dolor, blandit ut
-                    eleifend sed, pharetra ac mi. Nullam tincidunt sed metus ut imperdiet. Vivamus cursus, metus vel
-                    luctus mollis, lacus quam efficitur est, et eleifend tortor leo quis tellus. Donec tincidunt, turpis
-                    sed varius semper, nisi dolor dictum magna, in facilisis eros odio ac odio
-                </p>
-            </div>
-        </div>
-    </div>
-    <div class="col-12 pt-3">
-        <div class="card">
-            <div class="card-body">
-                <h4><img src=" http://placekitten.com/g/75/75" class="profile" />Holly</h4>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut erat dolor, blandit ut
-                    eleifend sed, pharetra ac mi. Nullam tincidunt sed metus ut imperdiet. Vivamus cursus, metus vel
-                    luctus mollis, lacus quam efficitur est, et eleifend tortor leo quis tellus. Donec tincidunt, turpis
-                    sed varius semper, nisi dolor dictum magna, in facilisis eros odio ac odio
-                </p>
-            </div>
-        </div>
-    </div>
-    <div class="col-12 pt-3">
-        <div class="card">
-            <div class="card-body">
-                <h4><img src=" http://placekitten.com/g/75/75" class="profile" />Sam</h4>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut erat dolor, blandit ut
-                    eleifend sed, pharetra ac mi. Nullam tincidunt sed metus ut imperdiet. Vivamus cursus, metus vel
-                    luctus mollis, lacus quam efficitur est, et eleifend tortor leo quis tellus. Donec tincidunt, turpis
-                    sed varius semper, nisi dolor dictum magna, in facilisis eros odio ac odio
-                </p>
-            </div>
-        </div>
-    </div>
-    <div class="col-12 pt-3">
-        <div class="card">
-            <div class="card-body">
-                <h4><img src=" http://placekitten.com/g/75/75" class="profile" />Luke</h4>
-                <p class="card-text">Luke started his tabletop gaming back in the late 90s. His first taste of Battle
-                    was in the form of the magazine
-                    “lord of the rings battles in middle earth” which was a bi weekly subscription which gave out a
-                    metal character in each issue.
-
-                    This sparked his interest in other GW games and he bought his first 40k starter set “Battle for
-                    Makragg” that he split with his friend. </p>
-                <p class="card-text">
-                    Luke took a long 10 year break shortly after that and didn’t come back too the hobby until the
-                    introduction of 40ks 8th edition.
-                    Luke has been helping the club for the past year by founding and producing the podcast.
-                    You can find Luke at the GTGC bar with a guest Ale and a few packets on O!nks.
-                </p>
-            </div>
-        </div>
-    </div>
 </div>
+
+
+<app-profile name="karl"></app-profile>
+<app-profile name="John"></app-profile>
+<app-profile name="Phil"></app-profile>
+<app-profile name="Holly"></app-profile>
+<app-profile name="Sam"></app-profile>
+<app-profile name="Luke"></app-profile>
