--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,8 +33,9 @@
 }
 
 img.profile {
-    width:50px;
-    height: 50px;
-    border-radius: 25px;
+    width:75px;
+    height: 75px;
+    border-radius: 37.5px;
     margin-right: 8px;
+    border:2px solid black;
 }
