--- a/src/app/podcast/profile/profile.component.html
+++ b/src/app/podcast/profile/profile.component.html
@@ -1,10 +1,10 @@
-<div class="row">
+<div class="row" *ngIf="profile">
     <div class="col-12 pt-3">
         <div class="card">
             <div class="card-body">
-                <h4><img src="" class="profile" /></h4>
-                <p class="card-text">
-                    
+                <h4><img src="{{profile.imgurl}}" class="profile" />{{profile.Name}}</h4>
+                <p class="card-text" [innerHtml]="profile.About">
+                
                 </p>
             </div>
         </div>
