moved loading div to own component

--- a/src/app/podcast/podcast.component.html
+++ b/src/app/podcast/podcast.component.html
@@ -19,7 +19,7 @@
 </div>
 
 
-<app-profile name="karl"></app-profile>
+<app-profile name="Karl"></app-profile>
 <app-profile name="John"></app-profile>
 <app-profile name="Phil"></app-profile>
 <app-profile name="Holly"></app-profile>
