--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -34,41 +34,20 @@
        
     </div>
     <div class="col-sm-12 col-md-6">
-        <iframe src="https://open.spotify.com/embed-podcast/show/3m9ycjUwMbuDVIxpw4tojb" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-    </div>
-</div>
-
-<!--
-
-    TODO: Put this in a component;
-        args:  number of rows to show
-               condition to show.          
--->
-<div class="row" *ngIf="posts == null">
-    <div class="col-12 mt-3" >
         <div class="card">
             <div class="card-body">
-                <div class="article-loading">
-                    <div class="title"></div>
-                    <div class="line"></div>
-                    <div class="line"></div>
-                </div>
+                <a routerLink="/podcast"><img class="img-fluid" src="https://media.discordapp.net/attachments/699937809104109688/699938240203063356/GTGClogo.png" /></a>
             </div>
         </div>
+      
     </div>
-    <div class="col-12 mt-3">
-        <div class="card">
-            <div class="card-body">
-                <div class="article-loading">
-                    <div class="title"></div>
-                    <div class="line"></div>
-                    <div class="line"></div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <!-- <div class="col-sm-12 col-md-6">
+            <iframe src="https://open.spotify.com/embed-podcast/show/3m9ycjUwMbuDVIxpw4tojb" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    </div> -->
 </div>
 
+
+<app-text-loading *ngIf="posts == null"  [SectionCount]="3"></app-text-loading>
 
 <div class="row mt-3" *ngFor="let post of posts">
     <div class="col-12">
